@@ -10,7 +10,6 @@ package io.harness.batch.processing.anomalydetection;
 import static io.harness.rule.OwnerRule.SANDESH;
 
 import static org.mockito.Matchers.any;
-import static org.mockito.Matchers.anyObject;
 import static org.mockito.Matchers.anyString;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
@@ -21,11 +20,13 @@ import io.harness.batch.processing.anomalydetection.alerts.SlackMessageGenerator
 import io.harness.batch.processing.anomalydetection.alerts.service.impl.AnomalyAlertsServiceImpl;
 import io.harness.batch.processing.mail.CEMailNotificationService;
 import io.harness.batch.processing.shard.AccountShardService;
+import io.harness.batch.processing.tasklet.util.CurrencyPreferenceHelper;
 import io.harness.category.element.UnitTests;
 import io.harness.ccm.anomaly.AnomalyDataStub;
 import io.harness.ccm.anomaly.service.itfc.AnomalyService;
 import io.harness.ccm.communication.CESlackWebhookService;
 import io.harness.ccm.communication.entities.CESlackWebhook;
+import io.harness.ccm.currency.Currency;
 import io.harness.rule.Owner;
 import io.harness.timescaledb.TimeScaleDBService;
 
@@ -37,8 +38,8 @@ import java.sql.Connection;
 import java.sql.SQLException;
 import java.sql.Statement;
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
@@ -50,6 +51,12 @@ import org.mockito.runners.MockitoJUnitRunner;
 
 @RunWith(MockitoJUnitRunner.class)
 public class AnomalyAlertsServiceImplTest extends CategoryTest {
+  private static final int SUCCESS_RESPONSE_CODE = 200;
+  private static final String ACCOUNT_ID = AnomalyDataStub.accountId;
+  private static final String WEBHOOK_URL =
+      "https://hooks.slack.com/services/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";
+  private Instant date;
+
   @Mock private TimeScaleDBService timeScaleDBService;
   @Mock private CEMailNotificationService emailNotificationService;
   @Mock private Slack slack;
@@ -58,12 +65,7 @@ public class AnomalyAlertsServiceImplTest extends CategoryTest {
   @InjectMocks private AnomalyAlertsServiceImpl alertsService;
   @Mock private AnomalyService anomalyService;
   @Mock private SlackMessageGenerator slackMessageGenerator;
-
-  private static final String ACCOUNT_ID = AnomalyDataStub.accountId;
-
-  private String WEBHOOK_URL = "https://hooks.slack.com/services/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";
-  private CESlackWebhook ceSlackWebhook;
-  private Instant date;
+  @Mock private CurrencyPreferenceHelper currencyPreferenceHelper;
 
   @Before
   public void setup() throws SQLException, IOException {
@@ -76,20 +78,22 @@ public class AnomalyAlertsServiceImplTest extends CategoryTest {
     when(timeScaleDBService.isValid()).thenReturn(true);
     when(mockConnection.createStatement()).thenReturn(mockStatement);
     when(emailNotificationService.send(any())).thenReturn(true);
-    when(accountShardService.getCeEnabledAccountIds()).thenReturn(Arrays.asList(ACCOUNT_ID));
+    when(accountShardService.getCeEnabledAccountIds()).thenReturn(List.of(ACCOUNT_ID));
 
-    ceSlackWebhook = CESlackWebhook.builder()
-                         .accountId(ACCOUNT_ID)
-                         .sendCostReport(false)
-                         .sendAnomalyAlerts(true)
-                         .webhookUrl(WEBHOOK_URL)
-                         .build();
+    CESlackWebhook ceSlackWebhook = CESlackWebhook.builder()
+                                        .accountId(ACCOUNT_ID)
+                                        .sendCostReport(false)
+                                        .sendAnomalyAlerts(true)
+                                        .webhookUrl(WEBHOOK_URL)
+                                        .build();
 
     when(ceSlackWebhookService.getByAccountId(ACCOUNT_ID)).thenReturn(ceSlackWebhook);
-    when(anomalyService.list(ACCOUNT_ID, date)).thenReturn(Arrays.asList(AnomalyDataStub.getClusterAnomaly()));
-    when(slackMessageGenerator.generateDailyReport(Arrays.asList(AnomalyDataStub.getClusterAnomaly())))
+    when(anomalyService.list(ACCOUNT_ID, date)).thenReturn(List.of(AnomalyDataStub.getClusterAnomaly()));
+    when(slackMessageGenerator.generateDailyReport(List.of(AnomalyDataStub.getClusterAnomaly()), Currency.USD))
         .thenReturn(Collections.emptyList());
-    when(slack.send(anyString(), (Payload) anyObject())).thenReturn(WebhookResponse.builder().code(200).build());
+    when(slack.send(anyString(), (Payload) any()))
+        .thenReturn(WebhookResponse.builder().code(SUCCESS_RESPONSE_CODE).build());
+    when(currencyPreferenceHelper.getDestinationCurrency(anyString())).thenReturn(Currency.USD);
   }
 
   @Test
@@ -97,6 +101,6 @@ public class AnomalyAlertsServiceImplTest extends CategoryTest {
   @Category(UnitTests.class)
   public void shouldSendAnomalyAlerts() throws IOException {
     alertsService.sendAnomalyDailyReport(ACCOUNT_ID, date);
-    verify(slack).send(anyString(), (Payload) anyObject());
+    verify(slack).send(anyString(), (Payload) any());
   }
 }
